add rubik fonts in epub dependencies

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/epub/epub_activity_skeleton.xhtml
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/epub/epub_activity_skeleton.xhtml
@@ -9,6 +9,7 @@
   <link href="../Styles/clix-activity-styles.css" rel="stylesheet"/>
   <link href="../Styles/video-js.css" rel="stylesheet"/>
   <link href="../Styles/sgc-toc.css" rel="stylesheet"/>
+  <link href="../Styles/rubik-fonts.css" rel="stylesheet"/>
   <link href="../Styles/videojs-skin-color.css" rel="stylesheet"/>
   <script src="../Misc/jquery.min.js" type="text/javascript"></script>
   <script src="../Misc/video.js" type="text/javascript"></script>
